Refactored files for following MVC structure