@@ -1,16 +1,10 @@
 package org.samaan.controllers;
 
-
 import org.samaan.model.User;
-import org.samaan.repositories.UserRepository;
-import org.samaan.services.JwtService;
-import org.samaan.config.AppConfig;
+import org.samaan.services.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.*;
 
@@ -19,112 +13,48 @@ import java.util.*;
 public class UserController {
 
     @Autowired
-    private JwtService jwtService;
-
-    @Autowired
-    private PasswordEncoder passwordEncoder;
-
-    @Autowired
-    private UserRepository userRepository;
+    private UserService userService;
 
     @GetMapping("/name")
     public ResponseEntity<String> getUserName(@RequestParam String email) {
-        Optional<User> user = Optional.ofNullable(userRepository.findByEmail(email));
-        return user.map(value -> ResponseEntity.ok(value.getName()))
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND).body("User not found"));
+        return userService.findByEmail(email)
+                .map(user -> ResponseEntity.ok(user.getName()))
+                .orElseGet(() -> ResponseEntity.status(404).body("User not found"));
     }
 
-    @PostMapping(path = "/register", consumes = MediaType.APPLICATION_JSON_VALUE)
+    @PostMapping("/register")
     public ResponseEntity<Map<String, String>> registerUser(@RequestBody User user) {
-        Map<String, String> response = new HashMap<>();
-
-        
-        if (userRepository.findByEmail(user.getEmail()) != null) {
-            response.put("error", "Email already exists");
-            return ResponseEntity.status(HttpStatus.CONFLICT).body(response);
-        }
-
-        user.setPassword(passwordEncoder.encode(user.getPassword()));
-        
-        userRepository.save(user);
-        response.put("message", "User registered successfully");
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+        return userService.registerUser(user);
     }
-
 
     @PostMapping("/login")
-    public ResponseEntity<Map<String, Object>> loginUser(@RequestBody Map<String, String> loginRequest) {
-        String email = loginRequest.get("email");
-        String password = loginRequest.get("password");
-
-        if (email == null || password == null) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("error", "Email and password are required"));
-        }
-
-        User user = userRepository.findByEmail(email);
-
-        if (user == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("error", "Invalid email or password"));
-        }
-
-        if (user.getPassword() == null || user.getPassword().isEmpty()) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("error", "Please log in using Google"));
-        }
-
-        if (!passwordEncoder.matches(password, user.getPassword())) {
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("error", "Invalid email or password"));
-        }
-
-
-        String token = jwtService.generateToken(user);
-
-        return ResponseEntity.ok(Map.of(
-                "token", token,
-                "message", "User successfully logged in"
-        ));
+    public ResponseEntity<Map<String, Object>> loginUser(@RequestBody Map<String, String> request) {
+        String email = request.get("email");
+        String password = request.get("password");
+        return userService.loginUser(email, password);
     }
-
 
     @GetMapping
-    public ResponseEntity<?> getAllUsers() {
-        return ResponseEntity.ok(userRepository.findAll());
+    public ResponseEntity<List<User>> getAllUsers() {
+        return ResponseEntity.ok(userService.findAllUsers());
     }
 
-    
     @GetMapping("/{id}")
     public ResponseEntity<?> getUserById(@PathVariable String id) {
-        Optional<User> user = userRepository.findById(id);
-        return user.map(ResponseEntity::ok)
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
-                        .body((User) Map.of("error", "User not found")));
+        return userService.findById(id)
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.status(404).body((User) Map.of("error", "User not found")));
     }
 
     @PostMapping("/getByEmail")
-    public ResponseEntity<?> getUserByEmail(@RequestBody Map<String, String> requestBody) {
-        String email = requestBody.get("email"); 
-        Optional<User> user = Optional.ofNullable(userRepository.findByEmail(email));
-
-        return user.map(ResponseEntity::ok)
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
-                        .body((User) Collections.singletonMap("error", "User not found")));
+    public ResponseEntity<?> getUserByEmail(@RequestBody Map<String, String> body) {
+        return userService.findByEmail(body.get("email"))
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.status(404).body((User) Map.of("error", "User not found")));
     }
 
     @PostMapping("/update")
-    public ResponseEntity<?> updateUser(@RequestBody User updatedUser) {
-        Optional<User> existingUser = Optional.ofNullable(userRepository.findByEmail(updatedUser.getEmail()));
-
-        if (existingUser.isPresent()) {
-            User user = existingUser.get();
-            user.setName(updatedUser.getName());
-            user.setPhoneNumber(updatedUser.getPhoneNumber());
-            user.setAddress(updatedUser.getAddress());
-
-            userRepository.save(user);
-            return ResponseEntity.ok(user);
-        } else {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Collections.singletonMap("error", "User not found"));
-        }
+    public ResponseEntity<?> updateUser(@RequestBody User user) {
+        return userService.updateUser(user);
     }
 }
